# Diplotocus

./: .gitignore  GUI.py  GUI_backup.py  GUI_old.py  INFO  LICENSE  __init__.py  animations.py  btn_bg.ai  core.py  diplotocus_logo.ai  easings.py  logo.ai  pyproject.toml  readme.md  test.py  test2.py
GUI/: GUI.html  __init__.py  app.js  constants.py  main_window.py  palette.py  play_controls.py  preview.py  server.py  style.css  timeline.py  timeline_clip.py  timeline_controls.py
GUI_web/: GUI.html  __init__.py  app.js  index.html  server.py  style.css
Unnamed/: Unnamed.txt
conda/: meta.yaml
diplotocus/: _generated_api.py  animations.py  core.py  easings.py  generate_doc_api.py  tutorial.ipynb  tweens.py
diplotocus-docs/: easings.ipynb  index.ipynb  requirements.txt
diplotocus-docs/_build/.doctrees/: easings.doctree  test.doctree
diplotocus-docs/_build/html/: functions.html  installation.html  test.html
diplotocus-docs/_build/html/_sources/: test2.rst
diplotocus-docs/_build/jupyter_execute/: index.ipynb
diplotocus-docs/functions/: scatter.ipynb
diplotocus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
diplotocus/diplotocus-docs/: _config.yml  _toc.yml  installation.ipynb
diplotocus/diplotocus-docs/_static/: force-light.js
diplotocus/diplotocus-docs/_templates/: layout.html
diplotocus/diplotocus-docs/functions/: axvline.ipynb
docs/: _toc.yml  easings.ipynb  requirements.txt
docs/_build/.doctrees/: easings.doctree  environment.pickle  functions.doctree  index.doctree  installation.doctree  tutorial.doctree
docs/_build/.doctrees/chapter1/: section1.doctree
docs/_build/html/: .buildinfo  easings.html  index.html  search.html  searchindex.js
docs/_build/jupyter_execute/: easings.ipynb  index.ipynb
docs/_static/: force-light.css
docs/jupyter_execute/notebooks/: animations.ipynb  index.ipynb  quick-start.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: core.rst
docs/source/notebooks/: GUI.ipynb  animations.ipynb  easings.ipynb  examples.ipynb  index.ipynb  installation.ipynb  logo.ipynb  plot_objects.ipynb  projects.ipynb  quick-start.ipynb  timeline.ipynb
src/btn/: btn_bg.ai
src/diplotocus/: __init__.py  animations.py  core.py  easings.py
src/diplotocus/GUI/: GUI.html  app.js  server.py  style.css
(+67 files in other folders)
