[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "diplotocus"
version = "0.0.2"
dependencies = [
  "numpy",
  "matplotlib",
  "svgpath2mpl"
]
authors = [
  { name="Tristan Boin", email="tristan.boin@obspm.fr" },
]
description = "A python package to generate animations using pyplot."
readme = "readme.md"
classifiers = [
  'Intended Audience :: Science/Research',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3'
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
packages = ["diplotocus"]