[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "diplotocus"
version = "0.0.5"
dependencies = [
  "numpy",
  "matplotlib",
  "svgpath2mpl"
]
authors = [
  { name="Tristan Boin", email="tristan.boin@obspm.fr" },
]
description = "A python package to generate animations of matplotlib objects."
readme = "diplotocus/readme.md"
classifiers = [
  'Intended Audience :: Science/Research',
  'Operating System :: OS Independent',
  'Framework :: Matplotlib',
  'Programming Language :: Python :: 3'
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"diplotocus.GUI" = ["*.html", "*.css", "*.js"]