[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "diplotocus"
dynamic = ["version"]
dependencies = [
  "numpy",
  "matplotlib",
  "svgpath2mpl"
]
authors = [
  { name="Tristan Boin", email="tristan.boin@obspm.fr" },
]
description = "A python package to generate animations of matplotlib objects."
readme = "readme.md"
classifiers = [
  'Intended Audience :: Science/Research',
  'Operating System :: OS Independent',
  'Framework :: Matplotlib',
  'Programming Language :: Python :: 3'
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.dynamic]
version = {attr = "diplotocus._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"diplotocus.GUI" = ["*.html", "*.css", "*.js"]